[package]
name = "sudoku_web"
version = "0.1.0"
authors = ["Martin-Louis Bright <mlbright@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
stdweb = "0.4.20"
sudoku = { git = "https://github.com/mlbright/sudoku-norvig-rs" }
wasm-bindgen = "0.2.78"
web-sys = { version = "0.3.55", features = ['console'] }